--- a/2_layout/3_grid_system/index.html
+++ b/2_layout/3_grid_system/index.html
@@ -15,9 +15,14 @@
         </header>
      </div>
    </div>
+
    <div class="row">
      <div class="col-4">
         <nav>nav</nav>
+     </div>
+
+     <div class="col-8">
+      <main>content - 8</main>
      </div>
    </div>
  </div>
