--- a/2_layout/6_grid_sistem-small/index.html
+++ b/2_layout/6_grid_sistem-small/index.html
@@ -7,13 +7,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"></head>
     <link rel="stylesheet" href="style.css">
 <body>
- <div class="container">
-   <h1>Container</h1>
-</div>
+   <div class="container">
+   <div class="row">
+    <div class="col-sm-8">sm-8</div>
+    <div class="col-sm-4">sm-4</div>
+   </div>
+   <div class="row">
+    <div class="col">auto</div>
+    <div class="col-sm-5">sm-5</div>
+    <div class="col">auto</div>
+   </div>
+ </div>
+ 
 
-<div class="container-fluid">
-    <h1>Container Fluido</h1>
-</div>
 
 
   
