--- a/2_layout/7_grid_sistem-mobile/index.html
+++ b/2_layout/7_grid_sistem-mobile/index.html
@@ -7,13 +7,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"></head>
     <link rel="stylesheet" href="style.css">
 <body>
- <div class="container">
-   <h1>Container</h1>
-</div>
+   <div class="container">
+     <div class="row">
+        <div class="col col-md-8"></div>
+        <div class="col col-md-4"></div>
+     </div>
+    <div class="row">
+      <div class="col-5 col-md-2"></div>
+      <div class="col-2 col-md-4"></div>
+      <div class="col-5 col-md-4"></div>
+    </div>
+    <div class="row">
+      <div class="col-4 col-sm-2 col-md-3"></div>
+      <div class="col-4 col-sm-2 col-md-3"></div>
+      <div class="col-2 col-sm-4 col-md-3"></div>
+      <div class="col-2 col-sm-4 col-md-3"></div>
+    </div>
+ </div>
+ 
 
-<div class="container-fluid">
-    <h1>Container Fluido</h1>
-</div>
 
 
   
